# stone-prover-ec

./: CMakeLists.txt
src/: CMakeLists.txt
src/nethermind/: CMakeLists.txt  ec_committed_trace_test.cc  ec_data.cc  ec_data.h  ec_data.inl  ec_fft_bases.cc  ec_fft_bases.h  ec_fft_domain.h  ec_fft_with_precompute.h  ec_fft_with_precompute.inl  ec_group.h  ec_lde.h  ec_lde.inl  ec_lde_manager_impl.h  ec_lde_manager_impl.inl  list_of_ec_cosets.cc  list_of_ec_cosets.h
src/starkware/air/: CMakeLists.txt
src/starkware/algebra/: CMakeLists.txt  field_element_base.h
src/starkware/algebra/elliptic_curve/: elliptic_curve.h
src/starkware/algebra/fields/: prime_field_element.h
src/starkware/algebra/lde/: cached_lde_manager.cc  cached_lde_manager.h  lde.cc
src/starkware/algebra/polymorphic/: CMakeLists.txt  field_element.cc  field_element.h  field_element.inl
src/starkware/algebra/utils/: invoke_template_version.h  name_to_field.cc
src/starkware/stark/: committed_trace.cc  committed_trace.h
